2008-06-03  Aaron Bockover  <abock@gnome.org>

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/FullscreenWindow.cs:
	Fixed focus bug with metacity (BGO #531187)

	* src/Dap/Banshee.Dap/Banshee.Dap.Gui/DapInfoBar.cs: Use only the normal
	background color and create a darker version of that to do the subtle
	gradient behind the bar (BGO #536052)

2008-06-03  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtJob.cs:
	* src/Extensions/Banshee.CoverArt/Banshee.CoverArt/CoverArtService.cs:
	Remove verbose logging.

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/ConnectedSeekSlider.cs:
	Fix bug where stream position label didn't return to 'Idle' when playback
	was stopped.

2008-06-03  Aaron Bockover  <abock@gnome.org>

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/FullscreenWindow.cs:
	Reconfigure the window when we're shown so we'll fullscreen to the
	proper monitor (whatever monitor the parent is on) (BGO #535982)

2008-06-03  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Services/Banshee.MediaEngine/PlayerEngineService.cs:
	In Play (), always call OnPlayWhenIdleRequest if we are in the idle state,
	otherwise call Play on the base engine (BGO #534472)
	
	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseImportManager.cs:
	Also add mpga to the white list

2008-06-03  Aaron Bockover  <abock@gnome.org>

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Remove the footer widget
	property after destroying the widget to avoid a property notification cycle

	* src/Dap/Banshee.Dap/Banshee.Dap.Gui/DapInfoBar.cs: Wrap UpdateUsage
	in an exception catch/log

	* src/Backends/Banshee.Hal/Banshee.HalBackend/HardwareManager.cs: Catch
	any exceptions that HAL might through (particularly if the device no
	longer exists) when adding devices (BGO #528957)

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseImportManager.cs: